--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-router-dom": "^5.1.7",
     "axios": "^0.27.2",
     "ionicons": "^5.4.0",
+    "moment": "^2.29.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
@@ -71,5 +72,5 @@
   "devDependencies": {
     "@capacitor/cli": "3.5.1"
   },
-  "description": "An Ionic project"
+  "description": "Pokemon Display App to test Ionic Framework"
 }
